--- a/index.html
+++ b/index.html
@@ -5,16 +5,15 @@
       {
         "@context": "https://schema.org",
         "@type": "Person",
-        "name": "Kishan Modhu",
-        "url": "https://devkishan.vercel.app",
+        "name": "Ashish Bisht",
+        "url": "https://ashish-bisht01.netlify.app/",
         "sameAs": [
-          "https://www.linkedin.com/in/anthony-kishan",
-          "https://x.com/kishan_anthony",
-          "https://www.facebook.com/anthony.kishan.official/"
-          "https://www.instagram.com/anthony.kishan/"
+          "https://www.linkedin.com/in/ashish-bisht-466593184/",
+          "https://x.com/siash01",
+          "https://www.instagram.com/siash01/"
         ],
-          "image": "https://devkishan.vercel.app/Assets/Images/ashish-profile.png",
-        "jobTitle": "Web Developer"
+          "image": "./Assets/Images/ashish-profile.png",
+        "jobTitle": "Software Developer Engineer"
       }
     </script>
     <meta charset="UTF-8" />
@@ -23,31 +22,31 @@
 
     <meta
       name="msapplication-TileImage"
-      content="https://devkishan.vercel.app/Assets/Images/thumbnail.jpg"
+      content="./Assets/Images/ashish-profile.png"
     />
     <meta
       name="description"
-      content="Kishan Modhu is a web developer with expertise in front-end and back-end development. Check out my portfolio and blog."
+      content="Ashish Bisht is a Software Developer with expertise in front-end and back-end development. Check out my portfolio."
     />
     <meta
       name="keywords"
-      content="Kishan Modhu, web developer, portfolio, front-end development, back-end development, PHP developer, python developer, software developer"
+      content="Ashish Bisht, software developer, portfolio, front-end development, back-end development, raect, mobile developer, fullstack developer"
     />
     <meta
       property="og:title"
-      content="Kishan Modhu - Web Developer & Aspiring Software Developer"
+      content="Software Developer Engineer"
     />
     <meta
       property="og:description"
-      content="Explore my portfolio and learn more about my work as a web developer."
+      content="Explore my portfolio and learn more about my work as a software developer."
     />
     <meta
       property="og:image"
       itemprop="image"
-      content="https://devkishan.vercel.app/Assets/Images/thumbnail.jpg"
+      content="./Assets/Images/ashish-profile.png"
     />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:url" content="https://devkishan.vercel.app" />
+    <meta property="og:url" content="https://ashish-bisht01.netlify.app/" />
 
     <title>Ashish Bisht</title>
     <!-- BOOTSTRAP -->
