--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,6 @@
                 style="margin-left: 4rem"
                 >(ABOUT)</a
               >
-              
             </div>
             <div class="col-6 col-lg-3">
               <div class="toggle">
@@ -118,7 +117,6 @@
                     target="_blank"
                     >LINKEDIN</a
                   ><img src="Assets/Images/Icons/arrow.svg" alt="" />
-                 
                 </div>
               </div>
             </div>
@@ -149,7 +147,7 @@
                   type="text"
                   class="form-control"
                   id="firstName"
-                  placeholder="Kishan"
+                  placeholder="Ashish"
                   required
                 />
               </div>
@@ -162,7 +160,7 @@
                   type="text"
                   class="form-control"
                   id="lastName"
-                  placeholder="Modhu"
+                  placeholder="Bisht"
                   required
                 />
               </div>
